# stocknet

./: .gitignore  LICENSE  docker-compose.yml  influx-db-api.txt  predictor.ipynb  pyproject.toml
data-importer/: Dockerfile  influxdb_import.py  requirements.txt
elasticsearch/: Dockerfile
influxdb/: Dockerfile  start.sh
semantic-sentiment-analyst/: AAPL_earnings.json  entity_resolver.ipynb  stock_price_prediction.ipynb  test.ipynb  utils.py
semantic-sentiment-analyst/models/: models.py
stock-importer/: Dockerfile  analyst.ipynb  company_polarities_test.ipynb  pyproject.toml  semantic_sentiment_analysis.py  stock_import.py
tweet-importer/: Dockerfile  requirements.txt  tweet_import.py
