[tool.poetry]
name = "stocknet"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Darko Segvic <darko.segvic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
retry = "^0.9.2"
circuitbreaker = "^2.0.0"
influxdb-client = "^1.40.0"
networkx = "^3.2.1"
setfit = "^1.0.3"
yfinance = "^0.2.36"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
